tests/ui/union/union-derive-eq.current.stderr
error[E0277]: the trait bound `PartialEqNotEq: Eq` is not satisfied
  --> $DIR/union-derive-eq.rs:21:5
   |
LL | #[derive(Eq)]
   |          -- in this derive macro expansion
LL | union U2 {
LL |     a: PartialEqNotEq,
   |     ^^^^^^^^^^^^^^^^^ the trait `Eq` is not implemented for `PartialEqNotEq`
   |
note: required by a bound in `AssertParamIsEq`
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
help: consider annotating `PartialEqNotEq` with `#[derive(Eq)]`
   |
LL + #[derive(Eq)]
LL | struct PartialEqNotEq;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
